--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
     "require-dev": {
         "laminas/laminas-cli": "^1.0",
         "laminas/laminas-coding-standard": "~1.0.0",
+        "laminas/laminas-config-aggregator": "^1.5",
         "laminas/laminas-serializer": "^2.6",
         "phpbench/phpbench": "^1.0.0-beta2",
         "phpspec/prophecy-phpunit": "^2.0",
