--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "laminas/laminas-cache",
     "description": "Caching implementation with a variety of storage options, as well as codified caching strategies for callbacks, classes, and output",
-    "license": "BSD-3-Clause",
     "keywords": [
         "laminas",
         "cache",
@@ -9,24 +8,7 @@
         "psr-16"
     ],
     "homepage": "https://laminas.dev",
-    "support": {
-        "docs": "https://docs.laminas.dev/laminas-cache/",
-        "issues": "https://github.com/laminas/laminas-cache/issues",
-        "source": "https://github.com/laminas/laminas-cache",
-        "rss": "https://github.com/laminas/laminas-cache/releases.atom",
-        "chat": "https://laminas.dev/chat",
-        "forum": "https://discourse.laminas.dev"
-    },
-    "config": {
-        "process-timeout": 600,
-        "sort-packages": true
-    },
-    "extra": {
-        "laminas": {
-            "component": "Laminas\\Cache",
-            "config-provider": "Laminas\\Cache\\ConfigProvider"
-        }
-    },
+    "license": "BSD-3-Clause",
     "require": {
         "php": "^7.3 || ~8.0.0",
         "laminas/laminas-cache-storage-adapter-apc": "^1.0",
@@ -51,6 +33,13 @@
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0"
     },
+    "replace": {
+        "zendframework/zend-cache": "^2.9.0"
+    },
+    "provide": {
+        "psr/cache-implementation": "1.0",
+        "psr/simple-cache-implementation": "1.0"
+    },
     "require-dev": {
         "laminas/laminas-coding-standard": "~1.0.0",
         "laminas/laminas-serializer": "^2.6",
@@ -58,20 +47,26 @@
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5"
     },
-    "provide": {
-        "psr/cache-implementation": "1.0",
-        "psr/simple-cache-implementation": "1.0"
-    },
     "suggest": {
         "laminas/laminas-serializer": "Laminas\\Serializer component"
     },
+    "config": {
+        "process-timeout": 600,
+        "sort-packages": true
+    },
+    "extra": {
+        "laminas": {
+            "component": "Laminas\\Cache",
+            "config-provider": "Laminas\\Cache\\ConfigProvider"
+        }
+    },
     "autoload": {
-        "files": [
-            "autoload/patternPluginManagerPolyfill.php"
-        ],
         "psr-4": {
             "Laminas\\Cache\\": "src/"
-        }
+        },
+        "files": [
+            "autoload/patternPluginManagerPolyfill.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -92,7 +87,12 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
-    "replace": {
-        "zendframework/zend-cache": "^2.9.0"
+    "support": {
+        "issues": "https://github.com/laminas/laminas-cache/issues",
+        "forum": "https://discourse.laminas.dev",
+        "chat": "https://laminas.dev/chat",
+        "source": "https://github.com/laminas/laminas-cache",
+        "docs": "https://docs.laminas.dev/laminas-cache/",
+        "rss": "https://github.com/laminas/laminas-cache/releases.atom"
     }
 }
