--- a/composer.json
+++ b/composer.json
@@ -29,21 +29,6 @@
     },
     "require": {
         "php": "^7.3 || ~8.0.0",
-        "laminas/laminas-cache-storage-adapter-apc": "^1.0",
-        "laminas/laminas-cache-storage-adapter-apcu": "^1.0",
-        "laminas/laminas-cache-storage-adapter-blackhole": "^1.0",
-        "laminas/laminas-cache-storage-adapter-dba": "^1.0",
-        "laminas/laminas-cache-storage-adapter-ext-mongodb": "^1.0",
-        "laminas/laminas-cache-storage-adapter-filesystem": "^1.0",
-        "laminas/laminas-cache-storage-adapter-memcache": "^1.0",
-        "laminas/laminas-cache-storage-adapter-memcached": "^1.0",
-        "laminas/laminas-cache-storage-adapter-memory": "^1.0",
-        "laminas/laminas-cache-storage-adapter-mongodb": "^1.0",
-        "laminas/laminas-cache-storage-adapter-redis": "^1.0",
-        "laminas/laminas-cache-storage-adapter-session": "^1.0",
-        "laminas/laminas-cache-storage-adapter-wincache": "^1.0",
-        "laminas/laminas-cache-storage-adapter-xcache": "^1.0",
-        "laminas/laminas-cache-storage-adapter-zend-server": "^1.0",
         "laminas/laminas-eventmanager": "^3.3",
         "laminas/laminas-servicemanager": "^3.6",
         "laminas/laminas-stdlib": "^3.3",
@@ -52,6 +37,10 @@
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
+        "laminas/laminas-cache-storage-adapter-apcu": "^1.0",
+        "laminas/laminas-cache-storage-adapter-blackhole": "^1.0",
+        "laminas/laminas-cache-storage-adapter-filesystem": "^1.1",
+        "laminas/laminas-cache-storage-adapter-memory": "^1.0",
         "laminas/laminas-cli": "^1.0",
         "laminas/laminas-coding-standard": "~2.2.0",
         "laminas/laminas-config-aggregator": "^1.5",
@@ -70,6 +59,14 @@
         "psr/simple-cache-implementation": "1.0"
     },
     "suggest": {
+        "laminas/laminas-cache-storage-adapter-apcu": "APCu implementation",
+        "laminas/laminas-cache-storage-adapter-blackhole": "Blackhole/Void implementation",
+        "laminas/laminas-cache-storage-adapter-ext-mongodb": "MongoDB implementation",
+        "laminas/laminas-cache-storage-adapter-filesystem": "Filesystem implementation",
+        "laminas/laminas-cache-storage-adapter-memcached": "Memcached implementation",
+        "laminas/laminas-cache-storage-adapter-memory": "Memory implementation",
+        "laminas/laminas-cache-storage-adapter-redis": "Redis implementation",
+        "laminas/laminas-cache-storage-adapter-session": "Session implementation",
         "laminas/laminas-cli": "The laminas-cli binary can be used to consume commands provided by this component",
         "laminas/laminas-serializer": "Laminas\\Serializer component"
     },
