--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "laminas/laminas-cache-storage-adapter-blackhole": "2.0.x-dev",
         "laminas/laminas-cache-storage-adapter-filesystem": "2.0.x-dev",
         "laminas/laminas-cache-storage-adapter-memory": "2.0.x-dev",
+        "laminas/laminas-cache-storage-adapter-test": "2.0.x-dev",
         "laminas/laminas-cli": "^1.0",
         "laminas/laminas-coding-standard": "~2.2.0",
         "laminas/laminas-config-aggregator": "^1.5",
