--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,8 @@ nav:
         - "Standards Support":
             - PSR-6: v3/psr6.md
             - PSR-16: v3/psr16.md
+        - "Migration Guide":
+            - "Migration to Version 3.0": v3/migration/to-version-3.md
     - v2:
         - Installation: v2/installation.md
         - Storage:
