--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
     },
     "config": {
         "process-timeout": 600,
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.3.99"
+        }
     },
     "extra": {
         "laminas": {
