--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "laminas/laminas-eventmanager": "^3.4",
         "laminas/laminas-servicemanager": "^3.7",
         "laminas/laminas-stdlib": "^3.6",
-        "psr/cache": "^1.0",
+        "psr/cache": "^1.0 | ^3.0",
         "psr/simple-cache": "^1.0",
         "webmozart/assert": "^1.9"
     },
