--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "sort-packages": true,
         "platform": {
             "php": "7.3.99"
+        },
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "extra": {
@@ -53,8 +56,8 @@
         "laminas/laminas-serializer": "^2.6",
         "phpbench/phpbench": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "psalm/plugin-phpunit": "^0.16.1",
-        "vimeo/psalm": "^4.9"
+        "psalm/plugin-phpunit": "^0.17.0",
+        "vimeo/psalm": "^4.24"
     },
     "conflict": {
         "symfony/console": "<5.1"
