bugfix: `CacheItem` for `PSR-6` needs to start expiring after calling `CacheItemInterface#expiresAfter`
More details can be found in https://github.com/laminas/laminas-cache-storage-adapter-test/pull/31

Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -44,11 +44,12 @@
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
+        "cache/integration-tests": "dev-master",
         "laminas/laminas-cache-storage-adapter-apcu": "^2.0",
         "laminas/laminas-cache-storage-adapter-blackhole": "^2.0",
         "laminas/laminas-cache-storage-adapter-filesystem": "^2.0",
         "laminas/laminas-cache-storage-adapter-memory": "^2.0",
-        "laminas/laminas-cache-storage-adapter-test": "^2.0",
+        "laminas/laminas-cache-storage-adapter-test": "^2.2",
         "laminas/laminas-cli": "^1.0",
         "laminas/laminas-coding-standard": "~2.2.0",
         "laminas/laminas-config-aggregator": "^1.5",
