--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,12 @@
         }
     },
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~7.4.0 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-cache-storage-implementation": "1.0",
         "laminas/laminas-eventmanager": "^3.4",
         "laminas/laminas-servicemanager": "^3.11",
         "laminas/laminas-stdlib": "^3.6",
+        "lcobucci/clock": "^2.0",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0",
         "webmozart/assert": "^1.9"
