--- a/composer.json
+++ b/composer.json
@@ -39,9 +39,9 @@
         "laminas/laminas-eventmanager": "^3.4",
         "laminas/laminas-servicemanager": "^3.11",
         "laminas/laminas-stdlib": "^3.6",
-        "lcobucci/clock": "^2.0",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0",
+        "stella-maris/clock": "^0.1.5",
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
