Add back platform 7.4 requirement
Signed-off-by: Rimvydas Zilinskas <rimvydas@loftdigital.com>

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
     "config": {
         "process-timeout": 600,
         "sort-packages": true,
+        "platform": {
+            "php": "7.4.99"
+        },
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
