--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "laminas/laminas-eventmanager": "^3.4",
         "laminas/laminas-servicemanager": "^3.11",
         "laminas/laminas-stdlib": "^3.6",
-        "psr/cache": "^2.0 || ^3.0",
+        "psr/cache": "^1.0 || ^2.0 || ^3.0",
         "psr/simple-cache": "^1.0",
         "stella-maris/clock": "^0.1.5",
         "webmozart/assert": "^1.9"
