--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "laminas/laminas-stdlib": "^3.6",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0",
-        "stella-maris/clock": "^0.1.5",
+        "psr/clock": "^1.0",
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
@@ -61,7 +61,8 @@
         "vimeo/psalm": "^5.4"
     },
     "conflict": {
-        "symfony/console": "<5.1"
+        "symfony/console": "<5.1",
+        "stella-maris/clock": "<0.1.7"
     },
     "provide": {
         "psr/cache-implementation": "1.0",
