--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
         - Installation: v3/installation.md
         - Storage:
             - Adapters: v3/storage/adapter.md
+            - "Adapter Plugin Manager": v3/storage/adapter-plugin-manager.md
             - Capabilities: v3/storage/capabilities.md
             - Plugins: v3/storage/plugin.md
         - "Cache Patterns":
