qa: remove dependency on real storage adapters
This also removes benchmarks which are so available in each adapter repository and thus were redundant.
Even tho, we are now unable to directly see impact on performance when changing `AbstractAdapter`, the adapters themselves keep track on performance due to renovate updating locks permanently.

Longterm, the `AbstractAdapter` will most likely be removed in favor of cache backend specific features explicitly implemented. The `StorageInterface` will extend the PSR interfaces and requires the adapters to serve these interfaces in their own way. Therefore, removing benchmarks might be a good thing since the `StorageInterface` is meant to be feature complete.

With #130, some methods might be removed from the `StorageInterface` but extending that interface is not planned.

Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /.gitignore export-ignore
 /.travis.yml export-ignore
 /benchmark/ export-ignore
+/dev-implementation/ export-ignore
 /docs/ export-ignore
 /mkdocs.yml export-ignore
 /phpbench.json export-ignore
