--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "require": {
         "php": "~8.1.0 || ~8.2.0",
-        "laminas/laminas-cache-storage-implementation": "1.0",
+        "laminas/laminas-cache-storage-implementation": "2.0",
         "laminas/laminas-eventmanager": "^3.4",
         "laminas/laminas-servicemanager": "^3.21",
         "laminas/laminas-stdlib": "^3.6",
@@ -45,17 +45,12 @@
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
-        "laminas/laminas-cache-storage-adapter-apcu": "^2.4",
-        "laminas/laminas-cache-storage-adapter-blackhole": "^2.3",
-        "laminas/laminas-cache-storage-adapter-filesystem": "^2.3",
-        "laminas/laminas-cache-storage-adapter-memory": "^2.2",
-        "laminas/laminas-cache-storage-adapter-test": "^2.4",
+        "laminas/laminas-cache-storage-adapter-dev": "@dev",
         "laminas/laminas-cli": "^1.7",
         "laminas/laminas-coding-standard": "~2.5.0",
         "laminas/laminas-config-aggregator": "^1.13",
         "laminas/laminas-feed": "^2.20",
         "laminas/laminas-serializer": "^2.14",
-        "phpbench/phpbench": "^1.2.7",
         "phpunit/phpunit": "^9.5.27",
         "psalm/plugin-phpunit": "^0.18.4",
         "vimeo/psalm": "^5.4"
@@ -87,12 +82,16 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "LaminasTest\\Cache\\": "test/",
-            "LaminasBench\\Cache\\": "benchmark/"
+            "LaminasTest\\Cache\\": "test/"
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./dev-implementation"
+        }
+    ],
     "scripts": {
-        "benchmark": "phpbench run --revs=2 --iterations=2 --report=aggregate",
         "check": [
             "@cs-check",
             "@static-analysis",
